Added message if the player has never joined the server before

--- a/ressources/config.yml
+++ b/ressources/config.yml
@@ -15,6 +15,12 @@ join:
 leave:
   enable: true
 
+##################
+#   First Join   #
+##################
+first-join:
+  enable: true
+
 #####################
 # Permission System #
 #####################
