--- a/ressources/plugin.yml
+++ b/ressources/plugin.yml
@@ -1,10 +1,12 @@
 name: JoinAndLeave
-version: 1.0.0
+version: 1.2
 main: fr.neiyko.joinandleave.JoinAndLeave
 author: Neiyko
 description: Plugin allowing to have a message when a player joins or leaves the server
 depend:
   - Vault
 commands:
-  jalreload:
+  joinandleave:
     description: Used to reload the plugin
+    aliases:
+      - jal
